--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   cached_network_image: ^1.0.0
+  cloud_firestore: ^0.12.5+2
+  firebase_auth: ^0.11.1+7
+  firebase_database: ^3.0.3
+  firebase_storage: ^3.0.2
+
 
 dev_dependencies:
   flutter_test:
