--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,19 @@ dependencies:
   firebase_auth: ^0.11.1+7
   firebase_database: ^3.0.3
   firebase_storage: ^3.0.2
+  flutter_launcher_icons: ^0.7.2+1
+  shared_preferences: ^0.5.3+2
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "icons/pizzaIcon.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -50,8 +58,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #  #  #  - images/a_dot_burr.jpeg
+  #  #  #  - images/a_dot_ham.jpeg
+
+  assets:
+         - icons/pizzaIcon.png
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
