--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_storage: ^3.0.2
   flutter_launcher_icons: ^0.7.2+1
   shared_preferences: ^0.5.3+2
+  image_picker: ^0.6.1+2
 
 
 dev_dependencies:
